@@ -33,15 +33,19 @@ public class EmpleadosService {
                 .orElseThrow(() -> new RuntimeException("Empleado no encontrado"));
     }
 
+    // Mantengo tu firma, pero nota: aquí se lanza excepción si no existe.
     public Optional<Empleados> findByEmail(String email) {
         if (email == null || email.isBlank()) throw new RuntimeException("Email obligatorio");
-        return Optional.ofNullable(empleadosRepository.findByEmail(email.trim())
+        String e = email.trim();
+        return Optional.ofNullable(empleadosRepository.findByEmail(e)
                 .orElseThrow(() -> new RuntimeException("Empleado no encontrado por email")));
     }
 
+    // Mantengo tu firma, pero nota: aquí se lanza excepción si no existe.
     public Optional<Empleados> findByTelefono(String telefono) {
-        String tel = normalizarYValidarTelefono(telefono); // ✅ solo números
+        String tel = normalizarYValidarTelefono(telefono);
         if (tel == null) throw new RuntimeException("Teléfono obligatorio");
+
         return Optional.ofNullable(empleadosRepository.findByTelefono(tel)
                 .orElseThrow(() -> new RuntimeException("Empleado no encontrado por teléfono")));
     }
@@ -59,13 +63,13 @@ public class EmpleadosService {
     public void crear(EmpleadosDTO dto) {
         validarCamposCrear(dto);
 
-        if (empleadosRepository.existsByEmail(dto.getEmail().trim())) {
+        String email = dto.getEmail().trim();
+        String telefono = dto.getTelefono(); // ya viene normalizado y validado en validarCamposCrear()
+
+        if (empleadosRepository.existsByEmail(email)) {
             throw new RuntimeException("Email ya registrado");
         }
-
-        String telefonoNormalizado = normalizarYValidarTelefono(dto.getTelefono());
-
-        if (telefonoNormalizado != null && empleadosRepository.existsByTelefono(telefonoNormalizado)) {
+        if (empleadosRepository.existsByTelefono(telefono)) {
             throw new RuntimeException("Teléfono ya registrado");
         }
 
@@ -74,13 +78,12 @@ public class EmpleadosService {
 
         Empleados e = new Empleados();
         e.setNombre(dto.getNombre().trim());
-        e.setEmail(dto.getEmail().trim());
-        e.setTelefono(telefonoNormalizado);
-        e.setPassword(dto.getPassword()); // aquí no has pedido hash
+        e.setEmail(email);
+        e.setTelefono(telefono);
+        e.setPassword(dto.getPassword()); // sin hash (igual que tu código actual)
         e.setIdRol(rol);
 
         e.setFechaIngreso(dto.getFechaIngreso() != null ? dto.getFechaIngreso() : LocalDate.now());
-
         e.setEstado(normalizarEstado(dto.getEstado()));
 
         empleadosRepository.save(e);
@@ -100,19 +103,21 @@ public class EmpleadosService {
 
     public Empleados actualizar(Integer id, EmpleadosDTO dto) {
         if (id == null) throw new RuntimeException("Id obligatorio");
-        validarCamposActualizar(dto);
 
         Empleados e = empleadosRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Empleado no encontrado"));
 
+        validarCamposActualizar(dto);
+
         String nuevoEmail = dto.getEmail().trim();
+        String nuevoTelefono = dto.getTelefono(); // ya viene normalizado (o null) por validarCamposActualizar()
+
         if (!e.getEmail().equals(nuevoEmail) && empleadosRepository.existsByEmail(nuevoEmail)) {
             throw new RuntimeException("Email ya registrado");
         }
 
-        String nuevoTelefono = normalizarYValidarTelefono(dto.getTelefono());
-
-        if (nuevoTelefono != null && (e.getTelefono() == null || !nuevoTelefono.equals(e.getTelefono()))
+        if (nuevoTelefono != null
+                && (e.getTelefono() == null || !nuevoTelefono.equals(e.getTelefono()))
                 && empleadosRepository.existsByTelefono(nuevoTelefono)) {
             throw new RuntimeException("Teléfono ya registrado");
         }
@@ -133,7 +138,6 @@ public class EmpleadosService {
             e.setPassword(dto.getPassword());
         }
 
-
         if (dto.getIdRol() != null) {
             RolesEmpleado rol = rolesEmpleadoRepository.findById(dto.getIdRol())
                     .orElseThrow(() -> new RuntimeException("Rol no encontrado"));
@@ -143,49 +147,65 @@ public class EmpleadosService {
         return empleadosRepository.save(e);
     }
 
-    public List<Empleados> BuscarPorLetras(String letra)
-    {
+    public List<Empleados> BuscarPorLetras(String letra) {
         return empleadosRepository.buscarPorLetra(letra);
     }
 
     public List<Empleados> buscarEmpleadosFiltrados(
-            String telefono, String email, String estado, 
+            String telefono, String email, String estado,
             Integer idRol, Boolean tieneClientes, LocalDate fechaIngreso) {
         return empleadosRepository.buscarEmpleadosFiltrados(
                 telefono, email, estado, idRol, tieneClientes, fechaIngreso);
     }
 
+    // ==========================
+    // VALIDACIONES (estilo ClienteService)
+    // ==========================
+
     private void validarCamposCrear(EmpleadosDTO dto) {
         if (dto == null) throw new RuntimeException("DTO obligatorio");
 
-        if (dto.getNombre() == null || dto.getNombre().isBlank()) {
+        if (dto.getNombre() == null || dto.getNombre().trim().isEmpty()) {
             throw new RuntimeException("Nombre obligatorio");
         }
-        if (dto.getEmail() == null || dto.getEmail().isBlank()) {
+
+        if (dto.getPassword() == null || dto.getPassword().trim().isEmpty()) {
+            throw new RuntimeException("La password pa otro día ¿no?");
+        }
+
+        if (dto.getEmail() == null || dto.getEmail().trim().isEmpty() || !dto.getEmail().contains("@")) {
             throw new RuntimeException("Email obligatorio");
         }
-        if (dto.getPassword() == null || dto.getPassword().isBlank()) {
-            throw new RuntimeException("Password obligatorio");
-        }
+
         if (dto.getIdRol() == null) {
             throw new RuntimeException("Rol obligatorio");
         }
+
+        String tel = normalizarYValidarTelefono(dto.getTelefono());
+        if (tel == null) {
+            throw new RuntimeException("¿Y tú teléfono olvidona?");
+        }
+        // Requiere que EmpleadosDTO tenga setTelefono(...)
+        dto.setTelefono(tel);
     }
 
     private void validarCamposActualizar(EmpleadosDTO dto) {
         if (dto == null) throw new RuntimeException("DTO obligatorio");
 
-        if (dto.getNombre() == null || dto.getNombre().isBlank()) {
+        if (dto.getNombre() == null || dto.getNombre().trim().isEmpty()) {
             throw new RuntimeException("Nombre obligatorio");
         }
-        if (dto.getEmail() == null || dto.getEmail().isBlank()) {
+
+        if (dto.getEmail() == null || dto.getEmail().trim().isEmpty() || !dto.getEmail().contains("@")) {
             throw new RuntimeException("Email obligatorio");
         }
+
+        dto.setTelefono(normalizarYValidarTelefono(dto.getTelefono()));
         // password / rol / fechaIngreso / estado: opcionales en update
     }
 
     /**
-     * ✅ Normaliza el estado para soportar un <select> "Sí/No"
+     * Normaliza el estado para soportar un <select> "Sí/No"
      * - null o vacío => "activo"
      * - "si"/"sí"/"true"/"1"/"activo" => "activo"
      * - "no"/"false"/"0"/"inactivo" => "inactivo"
@@ -202,21 +222,29 @@ public class EmpleadosService {
         };
     }
 
+    /**
+     * Igual que en tu ClienteService:
+     * - null/blank => null
+     * - quita espacios internos
+     * - solo dígitos
+     * - exige 9 dígitos
+     */
     private String normalizarYValidarTelefono(String telefono) {
         if (telefono == null) return null;
 
         String t = telefono.trim();
-        if (t.isBlank() && t.length() < 10) return null;
+        if (t.isBlank()) return null;
 
-        t = t.replaceAll("\\s+", ""); // esto quita espacios
-
-        if (t.length() > 9) {
-            throw new IllegalArgumentException("Pero que número es ese subnormal");
-        }
+        t = t.replaceAll("\\s+", "");
 
         if (!t.matches("\\d+")) {
             throw new RuntimeException("El teléfono solo puede contener números (0-9)");
         }
+
+        if (t.length() != 9) {
+            throw new IllegalArgumentException("Teléfono inválido: debe tener 9 dígitos");
+        }
+
         return t;
     }
 }
